--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="active page-link" dest="home">home</div>
           <div class="page-link" dest="about">about</div>
           <div class="page-link" dest="portfolio">portfolio</div>
-          <div class="page-link" dest="education">Education</div>
+          <div class="page-link" dest="blog">Education</div>
           <div class="page-link" dest="contact">contact</div>
         </div>
         <i class="mdi mdi-menu"></i>
@@ -270,7 +270,7 @@
   </section>
 
 <!-- BLOG -->
-  <section id="education">
+  <section id="blog">
     <div class="container flex">
 
       <div class="header waypoint" data-animation="slide-in-left">Education</div>
