--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Arturo Diaz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <!-- HOSTED -->
@@ -96,7 +96,7 @@
           </div>
           <div class="waypoint" data-animation="fade-in">
             <div class="label bold">Fast</div>
-            <div>Fast load times and lag free interaction, my highest priority.</div>
+            <div>Efficient and quality work, applying the best practices.</div>
           </div>
         </div>
 
@@ -149,7 +149,8 @@
             <br>
             I have a serious passion for doing things right, the architectures and design patterns.
             <br> 
-            <span class="page-link highlight" dest="contact">Let's make something special.</span>
+            <br> 
+            <a href="https://drive.google.com/uc?id=16crM5b95PoicBkiMdlnpI20GAQ8Ju7Ij&export=download" download="Arturo Diaz CV" class="button-cv">Download CV</a>
           </div>
         </div>
 
@@ -241,22 +242,22 @@
     <div class="filter-wrap waypoint" data-animation="fade-in">
       <div class="flex row">
         <div class="filter" data-filter="all">ALL</div>
-        <div class="filter" data-filter=".kotil">KOTLIN</div>
-        <div class="filter" data-filter=".rails">JAVA</div>
-        <div class="filter" data-filter=".js">JAVASCRIPT</div>
+        <div class="filter" data-filter=".mobil">MOBILE</div>
+        <div class="filter" data-filter=".web">WEB</div>
+        <div class="filter" data-filter=".destop">DESKTOP</div>
       </div>
       <div class="float-bar">
         <div class="flex row">
           <div class="filter" data-filter="all">ALL</div>
-          <div class="filter" data-filter=".kotil">KOTLIN</div>
-          <div class="filter" data-filter=".rails">JAVA</div>
-          <div class="filter" data-filter=".js">JAVASCRIPT</div>
+          <div class="filter" data-filter=".kotil">MOBILE</div>
+          <div class="filter" data-filter=".rails">WEB</div>
+          <div class="filter" data-filter=".js">DESKTOP</div>
         </div>
       </div>
     </div>
 
     <div id="gallery" class="container flex row wrap waypoint">
-      <div class="mix kotil" data-my-order="1">
+      <div class="mix mobil" data-my-order="1">
         <div>
           <div class="card"></div>
           <div class="text">
@@ -342,17 +343,17 @@
     <i class="mdi mdi-chevron-double-up page-link" dest="home"></i>
 
     <div class="icon-wrap flex row">
-      <a href="https://www.linkedin.com/in/carlos-arturo-diaz-artiaga-697625119/">
+      <a href="https://www.linkedin.com/in/arturo-diaz02/" target="_blank">
         <div class="flex icon" id="icon-2"> 
           <i class="mdi mdi-linkedin"></i>
         </div>
       </a>
-      <a href="https://github.com/ArturoDiaz02">
+      <a href="https://github.com/ArturoDiaz02" target="_blank">
         <div class="flex icon" id="icon-3"> 
           <i class="mdi mdi-github-circle"></i>
         </div>
       </a>
-      <a href="https://www.instagram.com/arturod15/">
+      <a href="https://www.instagram.com/arturod15/" target="_blank">
         <div class="flex icon" id="icon-4"> 
           <i class="mdi mdi-instagram"></i>
         </div>
