--- a/index.html
+++ b/index.html
@@ -33,18 +33,6 @@
   <div class="modal-wrap flex">
     <div class="mask"></div>
     <div class="modal" id="modal">
-      <div class="carousel-wrap">
-        <div class="window">
-          <div id="carousel">
-          <div class="slide"></div>
-          <div class="slide"></div>
-          <div class="slide"></div>
-          </div>
-          <i class="mdi mdi-chevron-left" id="prev"></i>
-          <i class="mdi mdi-chevron-right" id="next"></i>
-        </div>
-        
-      </div>
       <div class="info-box">
         <div class="title"></div>
         <div class="tag"></div>
@@ -129,9 +117,9 @@
       <div class="float-bar">
         <div class="flex row">
           <div class="filter" data-filter="all">ALL</div>
-          <div class="filter" data-filter=".kotil">MOBILE</div>
-          <div class="filter" data-filter=".rails">WEB</div>
-          <div class="filter" data-filter=".js">DESKTOP</div>
+          <div class="filter" data-filter=".mobil">MOBILE</div>
+          <div class="filter" data-filter=".web">WEB</div>
+          <div class="filter" data-filter=".destop">DESKTOP</div>
         </div>
       </div>
     </div>
