--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             I have a serious passion for doing things right, the architectures and design patterns.
             <br> 
             <br> 
-            <a href="https://drive.google.com/uc?id=16crM5b95PoicBkiMdlnpI20GAQ8Ju7Ij&export=download" download="Arturo Diaz CV" class="button-cv">Download CV</a>
+            <a href="https://drive.google.com/uc?id=1_winmySIIRgKz14phJqNA8Pj5FNGwL2l&export=download" download="Arturo Diaz CV" class="button-cv">Descarga CV</a>
+            <a href="https://drive.google.com/uc?id=18DIZByql9cSgI8GblaxrVaAwLZS1ba1m&export=download" download="Arturo Diaz CV" class="button-cv">Download CV</a>
           </div>
         </div>
 
