--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <!-- <div><img class="up-arrow" src="img/up-arrow.png"></div> -->
           <div class="label bold">Who's this guy?</div>
           <div> 
-            I'm the Back-End developer but lover of mobile development
+            I'm a back-end developer but lover of mobile development.
             <br>
-            I have a serious passion for doing things right, the architectures and design patterns.
+            I have serious passion for doing things right, apply architectures and design patterns.
             <br> 
             <br> 
             <a href="https://drive.google.com/uc?id=1_winmySIIRgKz14phJqNA8Pj5FNGwL2l&export=download" download="Arturo Diaz CV" class="button-cv">Descarga HV</a>
