--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q9PWKPLHGM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-Q9PWKPLHGM');
+  </script>
+
   <!-- LOCAL -->
   <script src="scripts/showData.js"></script>
   <script src="scripts/pt.min.js"></script>
