--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- LOCAL -->
   <link rel="stylesheet" href="style/style.css">
-  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
 
   <!-- HOSTED -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -123,14 +123,16 @@
       <div class="flex row">
         <div class="filter" data-filter="all">ALL</div>
         <div class="filter" data-filter=".mobil">MOBILE</div>
-        <div class="filter" data-filter=".web">WEB</div>
+        <div class="filter" data-filter=".front">FRONTEND</div>
+        <div class="filter" data-filter=".back">BACKEND</div>
         <div class="filter" data-filter=".destop">DESKTOP</div>
       </div>
       <div class="float-bar">
         <div class="flex row">
           <div class="filter" data-filter="all">ALL</div>
           <div class="filter" data-filter=".mobil">MOBILE</div>
-          <div class="filter" data-filter=".web">WEB</div>
+          <div class="filter" data-filter=".front">FRONTEND</div>
+          <div class="filter" data-filter=".back">BACKEND</div>
           <div class="filter" data-filter=".destop">DESKTOP</div>
         </div>
       </div>
