--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q9PWKPLHGM"></script>
@@ -21,7 +21,7 @@
 
   <!-- LOCAL -->
   <link rel="stylesheet" href="style/style.css">
-  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
+  <link rel='shortcut icon' href='icons8-portafolio-16.png' />
 
   <!-- HOSTED -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
